add button type to non-submit buttons in examples

--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -54,7 +54,7 @@
         -->
         <div id="accordionGroup" class="Accordion">
           <h3>
-            <button aria-expanded="true" class="Accordion-trigger"
+            <button type="button" aria-expanded="true" class="Accordion-trigger"
               aria-controls="sect1" id="accordion1id">
               <span class="Accordion-title">
                 Personal Information
@@ -98,7 +98,7 @@
             </div>
           </div>
           <h3>
-            <button aria-expanded="false" class="Accordion-trigger"
+            <button type="button" aria-expanded="false" class="Accordion-trigger"
               aria-controls="sect2" id="accordion2id">
               <span class="Accordion-title">
                 Billing Address
@@ -133,7 +133,7 @@
             </div>
           </div>
           <h3>
-            <button aria-expanded="false" class="Accordion-trigger"
+            <button type="button" aria-expanded="false" class="Accordion-trigger"
               aria-controls="sect3" id="accordion3id">
               <span class="Accordion-title">
                 Shipping Address
