--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -62,7 +62,7 @@
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="both"
               aria-expanded="false" aria-haspopup="true" aria-owns="lb1"
             />
-            <button id="cb1-button" aria-label="Open" tabindex="-1">&#9661;</button>
+            <button type="button" id="cb1-button" aria-label="Open" tabindex="-1">&#9661;</button>
           </div>
           <ul id="lb1" role="listbox" aria-label="States">
             <li id="lb1-al" role="option">Alabama</li>
