--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
@@ -61,7 +61,7 @@
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="list"
               aria-expanded="false" aria-haspopup="true" aria-owns="cb1-listbox"
             />
-            <button id="cb1-button" tabindex="-1" aria-label="Open">&#9661;</button>
+            <button type="button" id="cb1-button" tabindex="-1" aria-label="Open">&#9661;</button>
           </div>
           <ul id="cb1-listbox" role="listbox" aria-label="States">
             <li id="lb1-al" role="option">Alabama</li>
