--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-none.html
@@ -62,7 +62,7 @@
                    aria-haspopup="true"
                    aria-owns="cb1-listbox"
             />
-            <button id="cb1-button" tabindex="-1" aria-label="Open">
+            <button type="button" id="cb1-button" tabindex="-1" aria-label="Open">
               &#9661;
             </button>
           </div>
