--- a/examples/disclosure/disclosure-navigation.html
+++ b/examples/disclosure/disclosure-navigation.html
@@ -58,7 +58,7 @@
       <nav aria-label="Mythical University">
         <ul id="exTest" class="disclosure-nav">
           <li>
-            <button aria-expanded="true" aria-controls="id_about_menu">About</button>
+            <button type="button" aria-expanded="true" aria-controls="id_about_menu">About</button>
             <ul id="id_about_menu">
               <li>
                 <a href="#mythical-page-content">Overview</a>
@@ -75,7 +75,7 @@
             </ul>
           </li>
           <li>
-            <button aria-expanded="true" aria-controls="id_admissions_menu">Admissions</button>
+            <button type="button" aria-expanded="true" aria-controls="id_admissions_menu">Admissions</button>
             <ul id="id_admissions_menu">
               <li>
                 <a href="#mythical-page-content">Apply</a>
@@ -98,7 +98,7 @@
             </ul>
           </li>
           <li>
-            <button aria-expanded="true" aria-controls="id_academics_menu">Academics</button>
+            <button type="button" aria-expanded="true" aria-controls="id_academics_menu">Academics</button>
             <ul id="id_academics_menu">
               <li>
                 <a href="#mythical-page-content">Colleges &amp; Schools</a>
