--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -157,7 +157,7 @@
 
           <div id="recipient-form">
             <input id="add-recipient-input" type="text" aria-label="Add Recipient" placeholder="New Recipient Name">
-            <button id="add-recipient-button">Add</button>
+            <button type="button" id="add-recipient-button">Add</button>
             <div class="accessible_elem">
               Last change to recipient list:
               <span aria-live="polite" aria-relevant="text" id="form-action-text"></span>
@@ -372,8 +372,8 @@
         </div>
 
         <div class="ex3_pagination">
-          <button disabled id="ex3_pageup_button">Previous</button>
-          <button id="ex3_pagedown_button">Next</button>
+          <button type="button" disabled id="ex3_pageup_button">Previous</button>
+          <button type="button" id="ex3_pagedown_button">Next</button>
         </div>
       </div>
       <div role="separator" id="ex3_end_sep" aria-labelledby="ex3_end_sep ex3_label" aria-label="End of"></div>
