--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -51,7 +51,7 @@
              <div class="date" hidden id="myDatepickerDate">current value is Friday, June 30th, 2019</div>
   
           <div  class="day spinbutton"
-  >         <button class="decrease"
+  >         <button type="button" class="decrease"
                   tabindex="-1"
                   aria-label="previous day">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
@@ -67,7 +67,7 @@
                   aria-valuemax="31"
                   aria-label="Day">1</div>
             <div class="next" aria-hidden="true">2</div>
-            <button class="increase"
+            <button type="button" class="increase"
                   tabindex="-1"
                   aria-label="next day">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
@@ -77,7 +77,7 @@
           </div>
   
           <div  class="month spinbutton">
-            <button class="decrease"
+            <button type="button" class="decrease"
                   tabindex="-1"
                   aria-label="previous month">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
@@ -93,7 +93,7 @@
                   aria-valuemax="11"
                   aria-label="Month">June</div>
             <div class="next" aria-hidden="true">July</div>
-            <button class="increase"
+            <button type="button" class="increase"
                   tabindex="-1"
                   aria-label="next month">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
@@ -103,7 +103,7 @@
           </div>
   
           <div  class="year spinbutton">
-            <button class="decrease"
+            <button type="button" class="decrease"
                   tabindex="-1"
                   aria-label="previous year">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
@@ -118,7 +118,7 @@
                     aria-valuemax="2040"
                     aria-label="Year">2019</div>
             <div class="next" aria-hidden="true">2020</div>
-            <button class="increase"
+            <button type="button" class="increase"
                   tabindex="-1"
                   aria-label="next year">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
