--- a/examples/alert/alert.html
+++ b/examples/alert/alert.html
@@ -42,7 +42,7 @@
       </p>
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
       <div id="ex1">
-        <button id="alert-trigger">Trigger Alert</button>
+        <button type="button" id="alert-trigger">Trigger Alert</button>
 
         <div id="example" role="alert"></div>
 
