--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -64,7 +64,7 @@
 
                 <div class="controls">
 
-                  <button class="rotation pause"
+                  <button type="button" class="rotation pause"
                           aria-label="Stop automatic slide show">
                     <svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
                       <rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"/>
@@ -80,7 +80,7 @@
                   </button>
 
 
-                  <button class="previous"
+                  <button type="button" class="previous"
                      aria-controls="myCarousel-items"
                      aria-label="Previous Slide">
                     <svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -90,7 +90,7 @@
                     </svg>
                   </button>
 
-                  <button class="next"
+                  <button type="button" class="next"
                      aria-controls="myCarousel-items"
                      aria-label="Next Slide">
                     <svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
