--- a/examples/disclosure/disclosure-faq.html
+++ b/examples/disclosure/disclosure-faq.html
@@ -48,7 +48,7 @@
     <div id="ex1">
       <dl class="faq">
         <dt>
-          <button aria-expanded="false" aria-controls="faq1_desc">What do I do if I have a permit for an assigned lot, but can't find a space there?</button>
+          <button type="button" aria-expanded="false" aria-controls="faq1_desc">What do I do if I have a permit for an assigned lot, but can't find a space there?</button>
         </dt>
         <dd>
           <p id="faq1_desc" class="desc">
@@ -58,7 +58,7 @@
           </p>
         </dd>
         <dt>
-          <button aria-expanded="false" aria-controls="faq2_desc">What do I do if I lose my permit or if my permit is stolen?</button>
+          <button type="button" aria-expanded="false" aria-controls="faq2_desc">What do I do if I lose my permit or if my permit is stolen?</button>
         </dt>
         <dd>
           <p id="faq2_desc" class="desc">You should come to the Parking office and report the
@@ -68,7 +68,7 @@
           </p>
         </dd>
         <dt>
-          <button aria-expanded="false" aria-controls="faq3_desc">Is there free parking on holidays?</button>
+          <button type="button" aria-expanded="false" aria-controls="faq3_desc">Is there free parking on holidays?</button>
         </dt>
         <dd>
           <p id="faq3_desc" class="desc">
@@ -79,7 +79,7 @@
           </p>
         </dd>
         <dt>
-          <button aria-expanded="false" aria-controls="faq4_desc">Do all parking facilities have the same enforcement rules?</button>
+          <button type="button" aria-expanded="false" aria-controls="faq4_desc">Do all parking facilities have the same enforcement rules?</button>
         </dt>
         <dd>
           <p id="faq4_desc" class="desc">
