--- a/examples/menu-button/menu-button-actions-active-descendant.html
+++ b/examples/menu-button/menu-button-actions-active-descendant.html
@@ -48,7 +48,7 @@
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>        
         <div id="ex1">
           <div class="menu_button">
-            <button
+            <button type="button"
                 id="menubutton1"
                 aria-haspopup="true"
                 aria-controls="menu1"
