--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -52,7 +52,7 @@
     <div id="ex1">
       <div class="format" role="toolbar" aria-label="Text Formatting" aria-controls="textarea1">
           <div class="group characteristics">
-            <button
+            <button type="button"
                 class="item bold popup"
                 aria-pressed="false"
                 value="bold"
@@ -60,7 +60,7 @@
               <span class="fas fa-bold" aria-hidden="true"></span>
               <span class="popup-label">Bold</span>
             </button>
-            <button
+            <button type="button"
                 class="item italic popup"
                 aria-pressed="false"
                 value="italic"
@@ -68,7 +68,7 @@
               <span class="fas fa-italic" aria-hidden="true"></span>
               <span class="popup-label">Italic</span>
             </button>
-            <button
+            <button type="button"
                 class="item underline popup"
                 aria-pressed="false"
                 value="underline"
@@ -80,7 +80,7 @@
           <div class="group"
                role="radiogroup"
                aria-label="Text Alignment">
-            <button
+            <button type="button"
                 role="radio"
                 class="item align-left popup"
                 aria-checked="true"
@@ -88,7 +88,7 @@
               <span class="fas fa-align-left" aria-hidden="true"></span>
               <span class="popup-label">Text Align Left</span>
             </button>
-            <button
+            <button type="button"
                 role="radio"
                 class="item align-center popup"
                 aria-checked="false"
@@ -96,7 +96,7 @@
               <span class="fas fa-align-center" aria-hidden="true"></span>
               <span class="popup-label">Text Align Center</span>
             </button>
-            <button
+            <button type="button"
                 role="radio"
                 class="item align-right popup"
                 aria-checked="false"
@@ -106,19 +106,19 @@
             </button>
           </div>
           <div class="group">
-            <button
+            <button type="button"
                 class="item copy"
                 aria-disabled="true"
                 tabindex="-1">
               Copy
             </button>
-            <button
+            <button type="button"
                 class="item paste"
                 aria-disabled="true"
                 tabindex="-1">
                 Paste
             </button>
-            <button
+            <button type="button"
                 class="item cut"
                 aria-disabled="true"
                 tabindex="-1">
@@ -126,7 +126,7 @@
             </button>
           </div>
           <div class="menu-popup group" >
-            <button
+            <button type="button"
               aria-haspopup="true"
               aria-controls="menu1"
               class="item menu-button"
