update description wording, add scroll on click and scroll tests

--- a/examples/listbox/listbox-grouped.html
+++ b/examples/listbox/listbox-grouped.html
@@ -29,7 +29,7 @@
   <h1>Listbox Example with Grouped Options</h1>
   <p>
     The following example implementation of the <a href="../../#Listbox">design pattern for listbox</a> demonstrates a single-select listbox widget with grouped options.
-    This widget is functionally similar to an HTML <code>select</code> element with labelled <code>optgroup</code> elements used to group options.
+    This widget is functionally similar to an HTML <code>select</code> element with <code>size</code> greater than 1 and labelled <code>optgroup</code> elements used to group options.
   </p>
   <p>Similar examples include:</p>
   <ul>
