Replace `rel` with `data-option`
Co-Authored-By: Nick Schonning <nschonni@gmail.com>

--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -61,7 +61,7 @@
           <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Style/Color</a>
           <ul role="menu" aria-label="Style/Color">
             <li role="none">
-              <ul role="group" rel="font-style" aria-label="Font Style">
+              <ul role="group" data-option="font-style" aria-label="Font Style">
                 <li role="menuitemcheckbox" data-option="font-bold" aria-checked="false">Bold</li>
                 <li role="menuitemcheckbox" data-option="font-italic" aria-checked="false">Italic</li>
               </ul>
