changes none to Prohibited

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4597,7 +4597,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
             </tr>
             <tr>
               <td><a href="#none" class="role-reference"><code>none</code></a></td>
-              <td>Do Not Name</td>
+              <td>Prohibited</td>
               <td>An element with <code>role="none"</code> is not part of the accessibility tree (except in error cases). Do not use <code>aria-labelledby</code> or <code>aria-label</code>.</td>
             </tr>
             <tr>
