--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2419,7 +2419,7 @@
 
       <section class="notoc">
         <h4>Example</h4>
-        <p><a href="examples/spinbutton/datepicker-spinbuttons.html">Date Picker Spin Button Example:</a> Illustrates a date picker made from thre spin buttons for day, month, and year.</p>
+        <p><a href="examples/spinbutton/datepicker-spinbuttons.html">Date Picker Spin Button Example:</a> Illustrates a date picker made from three spin buttons for day, month, and year.</p>
       </section>
 
       <section class="notoc">
@@ -3742,7 +3742,7 @@
          For example, a switch button named <q>Mute Conversation</q> in the <q>off</q> state could be announced as <q>Mute Conversation switch button off</q>.
         Because descriptions are optional strings that are usually significantly longer than names, they are presented last, sometimes after a slight delay.
         For example, <q>Mute Conversation Switch button off, Silences alerts and notifications about activity in this conversation.</q>
-        To reduce verbosity, some screen readers do not announce descriptions by default but instead inform users of their presence so that users can press a key that will announce the description. 
+        To reduce verbosity, some screen readers do not announce descriptions by default but instead inform users of their presence so that users can press a key that will announce the description.
       </p>
     </section>
 
@@ -4074,7 +4074,7 @@ However, most authors do not need such detailed understanding of the algorithms 
 &lt;/figure></code></pre>
           <p>
             Like with <code>table</code> elements, if a <code>figure</code> is not named using <code>aria-label</code> or <code>aria-labelledby</code>, the content of the <code>figcaption</code> element will be used as the accessible name.
-            However unlike <code>table</code> elements, if the <code>figcaption</code> element is not used for the name, it does not become an accessible description unless it is referenced by <code>aria-describedby</code>. 
+            However unlike <code>table</code> elements, if the <code>figcaption</code> element is not used for the name, it does not become an accessible description unless it is referenced by <code>aria-describedby</code>.
             Nevertheless, assistive technologies will render the content of a <code>figcaption</code> regardless of whether it is used as a name, description, or neither.
           </p>
           <p>Using the <code>caption</code> element to name a <code>table</code> element, or a <code>figcaption</code> element to name a <code>figure</code> element, satisfies <a href="#naming_rule_visible_text">Rule 2: Prefer Visible Text</a> and <a href="#naming_rule_native_techniques">Rule 3: Prefer Native Techniques</a>.</p>
@@ -4248,7 +4248,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
             <tr>
               <td><a href="#caption" class="role-reference"><code>caption</code></a></td>
               <td>Prohibited</td>
-              <td></td>              
+              <td></td>
             </tr>
             <tr>
               <td><a href="#cell" class="role-reference"><code>cell</code></a></td>
@@ -4276,8 +4276,8 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
             <tr>
               <td><a href="#code" class="role-reference"><code>code</code></a></td>
               <td>Prohibited</td>
-              <td></td>              
-            </tr>            
+              <td></td>
+            </tr>
             <tr>
               <td><a href="#columnheader" class="role-reference"><code>columnheader</code></a></td>
               <td>Required <strong>Only If</strong> Content Insufficient</td>
@@ -4321,7 +4321,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
                   <li>Named using <code>aria-labelledby</code> if a visible label is present, otherwise with <code>aria-label</code>.</li>
                 </ul>
               </td>
-            </tr>         
+            </tr>
             <tr>
               <td><a href="#definition" class="role-reference"><code>definition</code></a></td>
               <td>Recommended</td>
@@ -4330,8 +4330,8 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
             <tr>
               <td><a href="#deletion" class="role-reference"><code>deletion</code></a></td>
               <td>Prohibited</td>
-              <td></td>              
-            </tr>               
+              <td></td>
+            </tr>
             <tr>
               <td><a href="#dialog" class="role-reference"><code>dialog</code></a></td>
               <td>Required</td>
@@ -4359,8 +4359,8 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
             <tr>
               <td><a href="#emphasis" class="role-reference"><code>emphasis</code></a></td>
               <td>Prohibited</td>
-              <td></td>              
-            </tr>               
+              <td></td>
+            </tr>
             <tr>
               <td><a href="#feed" class="role-reference"><code>feed</code></a></td>
               <td>Recommended</td>
@@ -4397,8 +4397,8 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
             <tr>
               <td><a href="#generic" class="role-reference"><code>generic</code></a></td>
               <td>Prohibited</td>
-              <td></td>              
-            </tr>               
+              <td></td>
+            </tr>
             <tr>
               <td><a href="#grid" class="role-reference"><code>grid</code></a></td>
               <td>Required</td>
@@ -4446,8 +4446,8 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
             <tr>
               <td><a href="#insertion" class="role-reference"><code>insertion</code></a></td>
               <td>Prohibited</td>
-              <td></td>              
-            </tr>               
+              <td></td>
+            </tr>
             <tr>
               <td><a href="#img" class="role-reference"><code>img</code></a></td>
               <td>Required</td>
@@ -4624,8 +4624,8 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
             <tr>
               <td><a href="#paragraph" class="role-reference"><code>paragraph</code></a></td>
               <td>Prohibited</td>
-              <td></td>              
-            </tr>               
+              <td></td>
+            </tr>
             <tr>
               <td><a href="#presentation" class="role-reference"><code>presentation</code></a></td>
               <td>Prohibited</td>
@@ -4783,18 +4783,18 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
             <tr>
               <td><a href="#strong" class="role-reference"><code>strong</code></a></td>
               <td>Prohibited</td>
-              <td></td>              
-            </tr>  
+              <td></td>
+            </tr>
             <tr>
               <td><a href="#subscript" class="role-reference"><code>subscript</code></a></td>
               <td>Prohibited</td>
-              <td></td>              
-            </tr>   
+              <td></td>
+            </tr>
             <tr>
               <td><a href="#superscript" class="role-reference"><code>superscript</code></a></td>
               <td>Prohibited</td>
-              <td></td>              
-            </tr>                                        
+              <td></td>
+            </tr>
             <tr>
               <td><a href="#switch" class="role-reference"><code>switch</code></a></td>
               <td>Required <strong>Only If</strong> Content Insufficient</td>
