typo: forground -> foreground

--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -285,7 +285,7 @@
         </p>
         <ul>
           <li>
-            When the rotation control, next slide,  and previous slide buttons are rendered on top of the carousel images, the buttons have forground and background colors that meet WCAG 2.1 color contrast requirements.
+            When the rotation control, next slide,  and previous slide buttons are rendered on top of the carousel images, the buttons have foreground and background colors that meet WCAG 2.1 color contrast requirements.
             In addition, the focus styling uses SVG images that make the focus indicator highly visible when a control receives keyboard focus.
           </li>
           <li>The transparency of the caption area is decreased so the caption text meets the WCAG 2.1 color contrast requirements.</li>
